# CheapCrawler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt
src/: CMakeLists.txt
src/crawler/: ActionQueue.h  CMakeLists.txt  CurlAsioDownloader.cpp  DownloadQueues.h  RobotsFilter.cpp  RobotsFilter.h  RobotsLogic.cpp  RobotsLogic.h  RobotsTxtParser.cpp  RobotsTxtParser.h  TimeHeap.h  crawler.cpp  main.cpp
src/crawler/include/crawler/: CurlAsioDownloader.h  crawler.h
src/utils/: CMakeLists.txt  DownloadResult.cpp  DownloadResult.h  Hashable.h  JobQueue.h  Logger.cpp  Logger.h  MediaType.h  NotifyBox.h  ProgramLogic.h  TaskSystem.h  Url.h  getLine.cpp  getLine.h  gtestMain.cpp  handleExceptions.h  unique_resource.h
src/utils/curl/: CMakeLists.txt  CurlEasyDownloadManager.cpp  CurlEasyDownloadManager.h  CurlEasyMultiManager.cpp  CurlEasyMultiManager.h  CurlGlobalManager.cpp  CurlGlobalManager.h  CurlMultiManager.cpp  CurlMultiManager.h  DownloadManager.cpp  DownloadManager.h  HeaderCbHandler.h  HeaderHandler.cpp  HeaderHandler.h  curlTypes.h  throwOnError.h
src/utils/readUrlsFromFile/: CMakeLists.txt  readUrlsFromFile.cpp  readUrlsFromFile.h
src/utils/uriUtils/: CMakeLists.txt  uriUtils.cpp
src/utils/uriUtils/include/uriUtils/: uriUtils.h
test/: CMakeLists.txt
test/crawler/: ActionQueue.cpp  CMakeLists.txt  CurlAsioDownloader.cpp  ResultCallbackMock.h  RobotsFilter.cpp  RobotsLogic.cpp  RobotsTestData.h  RobotsTxtParser.cpp  TimeHeap.cpp  crawler.cpp
test/utils/: CMakeLists.txt  getLine.cpp
